# LabelStack

./: .env  .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .flake8  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: c500e2bdbad4_create_annotator_tables.py
backend/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/crud/: __init__.py  base.py  crud_annotation.py  crud_annotation_data.py  crud_annotation_review.py  crud_annotation_type.py  crud_dicom.py  crud_image_instance.py  crud_label.py  crud_label_assignment.py  crud_label_type.py  crud_role.py  crud_tag.py  crud_task.py  crud_user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  model_annotation.py  model_annotation_data.py  model_annotation_review.py  model_annotation_type.py  model_associations.py  model_dicom.py  model_image_instance.py  model_label.py  model_label_assignment.py  model_label_type.py  model_role.py  model_tag.py  model_tag_value.py  model_task.py  model_user.py
backend/app/query/: __init__.py  base.py  query_annotation.py  query_annotation_data.py  query_annotation_review.py  query_annotation_type.py  query_dicom.py  query_image_instance.py  query_label.py  query_label_assignment.py  query_label_type.py  query_role.py  query_tag.py  query_task.py  query_user.py
backend/app/resources/: __init__.py  modalities.py  (+2 more)
(+84 files in other folders)
