[tool.poetry]
name = "labelstack"
version = "0.0.0"
description = ""
authors = ["szymswiat.ml@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.18.3"
fastapi = "0.92.0"
python-multipart = "0.0.5"
email-validator = "1.0.5"
requests = "2.23.0"
passlib = {extras = ["bcrypt"], version = "1.7.2"}
tenacity = "8.2.1"
pydantic = "1.10.5"
emails = "0.6.0"
raven = "6.10.0"
gunicorn = "20.0.4"
jinja2 = "2.11.2"
psycopg2-binary = "2.9.5"
alembic = "1.9.4"
sqlalchemy = "2.0.4"
python-jose = {extras = ["cryptography"], version = "3.1.0"}
markupsafe = "2.1.1"
dicomweb-client = "0.56.2"
pandas = "1.3.5"
rich = "12.6.0"
typer = "0.7.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "22.6.0"
isort = "4.3.21"
autoflake = "1.3.1"
flake8 = "4.0.1"
pytest = "7.1.3"
pytest-cov = "2.8.1"
jupyter = "1.0.0"
ipykernel = "6.2.0"
pytest-order = "1.0.0"
pytest-env = "0.8.1"
rstr = "3.0.0"
watchgod = "0.8.2"
pylint = "2.15.5"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.pylint."messages control"]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
